--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,10 @@ html,body {
     margin: 0 auto;
 }
 
+h1 {
+    text-align: center;
+}
+
 h1.title {
     font-family: 'Nunito Sans', sans-serif;
     font-weight: 800;
