--- a/src/App.css
+++ b/src/App.css
@@ -163,6 +163,46 @@ article img {
     }
   }
 
+  .index-card-deck {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
+    width: 80%;
+    align-self: center;
+    margin: 0 auto;
+  }
+
+  .index-card {
+      display: block;
+      width: 350px;
+      background-color: green;
+      margin: 2px;
+  }
+
+  .index-card-img {
+      background-color: red;
+      width: 350px;
+      height: 220px;
+      position: relative;
+
+      background-position: center;
+      background-size: cover;
+      background-repeat: no-repeat;
+  }
+
+  .index-card-title {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 10px;
+      width: 90%;
+      text-align: center;
+
+      font-weight: 600;
+      color: white;
+      text-shadow: 2px 1px 4px #000000;
+
+  }
 
 
 
