--- a/src/App.css
+++ b/src/App.css
@@ -239,6 +239,27 @@ article img {
       text-shadow: 2px 1px 4px #000000;
   }
 
+  .article-menu {
+      position: absolute;
+      width: 100%;
+      top: 0;
+      left: 0;
+      height: 100px;
+      background-image: linear-gradient(to top, rgba(0,0,0,0), rgba(0,0,0,1));
+        opacity: .4;
+        text-shadow: 3em 3em 4em orange; 
+  }
+
+  .icon {
+      position: relative;
+      z-index: 2;
+      opacity: .7;
+  }
+
+  .icon:hover {
+      opacity: 1;
+  }
+
   .bt_seemore {
     background-color: #4CAF50; /* Green */
     border: none;
