--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ blockquote:before, blockquote:after {
     left: 0;
     width: 100%;
     height: 360px;
-    background-color:red;
+    background-color:#00f2ff;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center; 
@@ -216,7 +216,7 @@ article img {
   }
 
   .index-card-img {
-      background-color: red;
+      background-color: #00f2ff;
       width: 350px;
       height: 220px;
       position: relative;
@@ -235,6 +235,7 @@ article img {
       text-align: center;
       text-decoration: none;
       font-weight: 600;
+      font-size: 1.12em;
       color: white;
       text-shadow: 2px 1px 4px #000000;
   }
@@ -261,7 +262,7 @@ article img {
   }
 
   .bt_seemore {
-    background-color: #4CAF50; /* Green */
+    background-color: #1d305c;/* Green */
     border: none;
     color: white;
     padding: 15px 32px;
@@ -277,6 +278,43 @@ article img {
       padding: 2em;
   }
 
+  
+
+  .Loading {
+      position: absolute;
+      width: 200px;
+      height: 200px;
+      margin-left: -5em;
+      margin-top: -6em;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      
+      background: linear-gradient(0deg, rgba(255,0,0,0), rgba(52,235,213,1));
+      z-index: 200;
+      border-radius: 100px;
+      animation: spin .8s linear infinite;
+  }
+
+  @keyframes spin {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+  }
+
+  .Loading:after {
+      content: " ";
+      width: 80%;
+      height: 80%;
+      background-color: white;
+      z-index: 400;
+      display: block;
+      border-radius: 100px;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      margin-right: -50%;
+      transform: translate(-50%, -50%);
+  }
 
 
 
